SUBDIRS      = src

EXTRA_DIST   = data/plowrc \
               data/plow.struct.no_id.sql \
               data/plow.struct.sql \
               data/setup.sh.in

pkgdata_DATA = README \
               data/plowrc \
               data/plow.struct.sql \
               data/plow.struct.no_id.sql \
               data/setup.sh
