bin_PROGRAMS = plow
plow_SOURCES = AbstractReader.h \
               global.h \
               helper.cpp helper.h \
               ID3Reader.cpp ID3Reader.h \
               IniParser.cpp IniParser.h \
               main.cpp \
               OggReader.cpp OggReader.h \
               Sqlite3.cpp Sqlite3.h \
               Sqlite3Result.cpp Sqlite3Result.h \
               StringParser.cpp StringParser.h \
               TagReader.cpp TagReader.h

